--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer>
+      <a href="https://github.com/NeginVaez/weather-app">Open-source</a> code by
+      <a href="https://www.instagram.com/negin_v_/">Negin</a>
+    </footer>
   </body>
 </html>
