--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <footer>
-      <a href="https://github.com/NeginVaez/weather-app">Open-source</a> code by
+      <a href="https://github.com/NeginVaez/weather-app-1">Open-source</a> code
+      by
       <a href="https://www.instagram.com/negin_v_/">Negin</a>
     </footer>
   </body>
